--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -8,13 +8,25 @@
   position: absolute;
 }
 
-.preview-title {
-  font-weight: 700;
-}
-
 .createButton{
+
+  .panel-collapse {
+    background :white;
+  }
+  .panel-heading {
+    a {
+    color: black;
+    }
+  background-color: #f5f5f5;
+  border-color: #ddd;
+  padding: 10px 15px;
+  border-bottom: 1px solid transparent;
+  }
+  .panel-default {
+    margin-bottom: 18px;
+  }
   .panel-heading a:after {
-    font-family:'Glyphicons Halflings';
+    font-family:'Glyphicons Halflings Regular';
     content:"\e114";
     float: right;
     color: grey;
@@ -33,9 +45,9 @@
     }
   }
   .badge{
-    padding: 2px 5px;
-    font-size: 10px;
-    margin: 0 4px;
+    adding-left: 2px;
+    font-size: 14px;
+    margin: 0 10px;
   }
   .body{
     .halfColorBg;
@@ -71,7 +83,6 @@
     label{
       display: block;
       color: @subText;
-      margin-bottom: 2px;
     }
     .radio-name{
       margin: 0px 5px;
@@ -215,6 +226,8 @@
         .border-radius(6px, 6px, 6px, 0);
         border: 1px solid @border-grey;
         background: @panel-bg;
+        word-break: break-all;
+        word-wrap: break-word;
 
         .codebox-actions{
           position: absolute;
