--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -10,8 +10,23 @@
 
 .createButton{
 
+  pre {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
   .panel-collapse {
     background :white;
+    padding: 10px 10px;
   }
   .panel-heading {
     a {
@@ -26,13 +41,14 @@
     margin-bottom: 18px;
   }
   .panel-heading a:after {
-    font-family:'Glyphicons Halflings Regular';
-    content:"\e114";
+    font: normal normal normal 14px/1 FontAwesome;
+    content: "\f078";
+    margin-top: 5px;
     float: right;
-    color: grey;
+    color: black;
   }
   .panel-heading a.collapsed:after {
-      content:"\e080";
+    content:"\f054";
   }
   .options-wrap {
     padding: 10px !important;
@@ -45,7 +61,7 @@
     }
   }
   .badge{
-    adding-left: 2px;
+    padding-left: 1px;
     font-size: 14px;
     margin: 0 10px;
   }
@@ -141,6 +157,7 @@
 
   }
   .nav-tabs>li.active>a{
+    color: black;
     background: #FBFCFC;
   }
   .preview{
