--- a/views/widget/new.pug
+++ b/views/widget/new.pug
@@ -74,15 +74,14 @@ block content
 
                 .panel.panel-default
                   .panel-heading
-                    a.collapsed.title-toggle.expand-block.open-block(data-toggle="collapse", data-target="#extraConfiguration", href="#extraConfiguration") Extra Configuration
+                    a.collapsed.title-toggle(data-toggle="collapse", data-target="#extraConfiguration", href="#extraConfiguration") Extra Configuration
                   .panel-collapse.collapse#extraConfiguration
                     .options-wrap.active
                       .form-group
                         div(style="display:inline-block;")
-                          label
-                            input(type='checkbox' name='show_frame' ng-model='widget.show_frame')
-                            span.radio-name Show frame
-                            span.badge(data-toggle='tooltip' data-placement="right" title="Shows/Hides the background and border of the button") ?
+                          input(type='checkbox' name='show_frame' ng-model='widget.show_frame')
+                          span.radio-name Show frame
+                          span.badge(data-toggle='tooltip' data-placement="right" title="Shows/Hides the background and border of the button") ?
                         div(style="display:inline-block;")
                           span(style="margin-left:20px" ng-show='widget.show_frame') Pick frame color #[i.glyphicon.glyphicon-tint(aria-hidden='true' colorpicker colorpicker-position="right" ng-model="widget.frame_color" style="cursor: pointer" ng-style="{'color': widget.frame_color || 'black'}")]
 
@@ -125,7 +124,7 @@ block content
 
                 .panel.panel-default
                   .panel-heading
-                    a.collapsed.title-toggle.expand-block.open-block(data-toggle="collapse", data-target="#collapseAdvancedCallConfiguration", href="#collapseAdvancedCallConfiguration") Advanced Call Configuration
+                    a.collapsed.title-toggle(data-toggle="collapse", data-target="#collapseAdvancedCallConfiguration", href="#collapseAdvancedCallConfiguration") Advanced Call Configuration
                   .panel-collapse.collapse#collapseAdvancedCallConfiguration
                     .options-wrap.active
                       .form-group
@@ -146,7 +145,7 @@ block content
                         input.form-control(type="text" name="send_digits" ng-model="widget.send_digits")
                 .panel.panel-default
                   .panel-heading
-                    a.collapsed.title-toggle.expand-block.open-block(data-toggle="collapse" data-target="#collapseIncompatileBrowserConfiguration" href="#collapseIncompatileBrowserConfiguration") Incompatible Browser Configuration
+                    a.collapsed.title-toggle(data-toggle="collapse" data-target="#collapseIncompatileBrowserConfiguration" href="#collapseIncompatileBrowserConfiguration") Incompatible Browser Configuration
                   .panel-collapse.collapse#collapseIncompatileBrowserConfiguration
                     .options-wrap.active.incompatible
                       .form-group
@@ -175,5 +174,5 @@ block content
                   div(ng-bind="savingError")
 
                 .pull-right
-                  button.btn.btn-danger.btn-xs(style='margin-right: 5px;' ng-cloak ng-click='discardConfiguration(widget_form)' ng-disabled="savingConfig || !widget_form.$dirty") Discard Changes
-                  button#saveConfig.btn.btn-success.btn-lg(ng-cloak ng-click='saveConfiguration()' ng-disabled="widget_form.$invalid || savingConfig || widget_form.$pristine || sipDirty") {{submitText}}
+                  button.btn.btn-primary.btn-xs(style='margin-right: 5px;' ng-cloak ng-click='discardConfiguration(widget_form)' ng-disabled="savingConfig || !widget_form.$dirty") Discard Changes
+                  button#saveConfig.btn.btn-primary.btn-lg(ng-cloak ng-click='saveConfiguration()' ng-disabled="widget_form.$invalid || savingConfig || widget_form.$pristine || sipDirty") {{submitText}}
