--- a/views/widget/new.pug
+++ b/views/widget/new.pug
@@ -83,7 +83,7 @@ block content
                           span.radio-name Show frame
                           span.badge(data-toggle='tooltip' data-placement="right" title="Shows/Hides the background and border of the button") ?
                         div(style="display:inline-block;")
-                          span(style="margin-left:20px" ng-show='widget.show_frame') Pick frame color #[i.glyphicon.glyphicon-tint(aria-hidden='true' colorpicker colorpicker-position="right" ng-model="widget.frame_color" style="cursor: pointer" ng-style="{'color': widget.frame_color || 'black'}")]
+                          span(style="margin-left:20px" ng-show='widget.show_frame') Pick frame color #[i.fa.fa-tint(aria-hidden='true' colorpicker colorpicker-position="right" ng-model="widget.frame_color" style="cursor: pointer" ng-style="{'color': widget.frame_color || 'black'}")]
 
                       .form-group
                         label
