--- a/views/sip/new.pug
+++ b/views/sip/new.pug
@@ -43,16 +43,16 @@ block content
                   .panel-body.add-sip
                     form(name="sip_form" novalidate)
                       .form-group
-                        label SIP URI 
+                        label SIP URI
                           span.badge(data-toggle='tooltip' data-placement="top right" title="This is the SIP address where inbound traffic from your Click2Vox button will be directed. Enter any valid SIP URI.") ?
-                        input.form-control(type="text", name="sip_uri", ng-model="sip.uri" ng-pattern="/^[^@]+@[^@]+$/" check-allowed-sip auto-focus required)
+                        input.form-control(type="text" name="sip_uri", ng-model="sip.uri" ng-pattern="/^[^@]+@[^@]+$/" check-allowed-sip auto-focus required placeholder="i.e. sip@domain.com")
                         div(style='color: green')
                           div.ng-cloak(ng-show="onSubmitting") {{successMessage}}
-  
+
                         .error-label
                           div.ng-cloak(ng-show="sip_form.sip_uri.$error.notallowed") SIP URI not allowed
                           div.ng-cloak(ng-show="errorMessage") {{errorMessage}}
-  
+
                       .form-group.button-wrap(ng-cloak)
                         button.btn.btn-default-custom.save-sip(ng-disabled="sip_form.$invalid || onSubmitting" ng-click="saveSipURI(sip_form)" data-loading-text="Loading..." name="submitBtn") {{submitText}}
                         button.btn.btn-default-custom.skip-sip(ng-click=`skipURI('${process.env.APP_URL}/widget/new')`
