--- a/views/widget/new.pug
+++ b/views/widget/new.pug
@@ -142,7 +142,7 @@ block content
                           span.badge(data-toggle='tooltip' data-placement="right" title="Display a dialpad to allow your users to enter DTMF digits during a call.") ?
                       .form-group
                         label(for="btn-context") Send Digits #[span.badge(data-toggle='tooltip' data-placement="right" data-html="true" title="Automatically send DTMF digit(s) after a call is connected. This is useful for automatically navigating IVRs or entering access codes for a conference bridge. Digits should use the following format: <br><br>1,2,3,1200ms,4,5,900ms,6,#<br><br>This string will generate 1 2 3, wait 1200 milliseconds, enter 4, 5, wait 900 milliseconds then enter 6, #") ?]
-                        input.form-control(type="text" name="send_digits" ng-model="widget.send_digits")
+                        input.form-control(type="text" name="send_digits" ng-model="widget.send_digits" placeholder="i.e. 1,2,3,1200ms,4,5,900ms,6,#")
                 .panel.panel-default
                   .panel-heading
                     a.collapsed.title-toggle(data-toggle="collapse" data-target="#collapseIncompatileBrowserConfiguration" href="#collapseIncompatileBrowserConfiguration") Incompatible Browser Configuration
