fixing new sip text

--- a/views/sip/new.pug
+++ b/views/sip/new.pug
@@ -36,8 +36,7 @@ block content
 
                   .panel-header
                     h1 Add a new SIP address
-                    span Enter the SIP URI you would like to use for your button. Your free account allows you to use one SIP URI at a time but you can request for an upgrade.
-                    span Don't have a SIP URI? You can skip this for now.
+                    span Enter the SIP URI you would like to use for your button. Your free account allows you to use one SIP URI at a time but you can request for an upgrade. Don't have a SIP URI? You can skip this for now.
                     hr
 
                   .panel-body.add-sip
