Minor pending styling fixes

--- a/public/stylesheets/less_ui/pages/_sip.less
+++ b/public/stylesheets/less_ui/pages/_sip.less
@@ -1,11 +1,11 @@
 .add-sip {
   padding-top: 0 !important;
-  
+
   .button-wrap {
     text-align: center;
     padding-top: 5px;
 
-    
+
     button {
       margin: 0 10px;
     }
@@ -14,20 +14,20 @@
 
 .edit-sip {
   .modal-body {
-    
+
     .form-group {
-      
+
       label {
         margin-bottom: 5px;
       }
     }
   }
-  
+
   .modal-footer {
     border: none;
     text-align: center;
     padding-top: 0;
-    
+
     .btn {
       width: 100%;
       max-width: 230px;
@@ -39,7 +39,7 @@
 .sip-steps {
   position: relative;
   height: 100px;
-  width: auto;
+  width: 60%;
   margin: 60px 100px 0;
   border-top: 2px solid @navbar-grey;
 
@@ -86,4 +86,8 @@
 .centered-steps {
   margin-left: auto;
   margin-right: auto;
+}
+
+.panel-title {
+  font-weight: 300;
 }
