--- a/views/sip/edit_modal.pug
+++ b/views/sip/edit_modal.pug
@@ -1,4 +1,4 @@
-.modal.editSIPModal#editSIPModal(tabindex="-1" role="dialog" aria-labelledby="editSIPModalLabel" ng-controller="EditSIPController")
+.modal.editSIPModal#editSIPModal(tabindex="-1" role="dialog" )
   .modal.custom-modal.fade.in
     .modal-dialog.custom-modal-dialog(role="document")
       .modal-content.custom-modal-content.edit-sip
