--- a/public/stylesheets/less/widget.less
+++ b/public/stylesheets/less/widget.less
@@ -1,6 +1,6 @@
 /*Btn Widget Stuff*/
 .btn-widget(@btn-color){
-  max-width: 100%;
+  max-width: 300px !important;
   min-width: 140px;
   display: inline-block;
 
@@ -13,8 +13,6 @@
   line-height: 1.4;
   font-weight: 700;
   color: #ffffff;
-
-  white-space: nowrap;
   vertical-align: middle;
   touch-action: manipulation;
   cursor: pointer;
@@ -36,8 +34,10 @@
   box-shadow: 0 1px 1px rgba(0,0,0,0.16);
 
   span{
-    display: block;
-    width: 100%;
+    display: block !important;
+    word-wrap: break-word !important;
+    white-space: normal !important;
+    max-width: 100% !important;
     padding: 10px 12px 12px;
     border-top:1px solid rgba(255, 255, 255, 0.10);
     text-shadow: 0px -1px #07619E;
@@ -66,6 +66,7 @@
   text-align:center;
   margin-right: 5px;
   margin-left: 5px;
+  margin-bottom: 20px;
 }
 
 .buttons {
@@ -153,4 +154,11 @@
 
 .btn-style-disabled {
   cursor: not-allowed !important;
+}
+
+.btn-preview {
+  min-width: 130px !important;
+  max-width: 300px !important;
+  height: auto !important;
+  width: auto !important;
 }
