--- a/public/stylesheets/less_ui/pages/_home.less
+++ b/public/stylesheets/less_ui/pages/_home.less
@@ -3,6 +3,19 @@
   background-size: cover;
 }
 
+.color-boxes {
+  margin-bottom: 100px;
+}
+
+.home-buttons{
+  padding-left: 20px;
+  padding-right: 20px;
+  button{
+    width: 100%;
+    border-radius: 0;
+    margin-bottom: 20px;
+  }
+}
 
 .touch {
   text-align: left;
