--- a/views/home.pug
+++ b/views/home.pug
@@ -20,7 +20,7 @@ block content
           h3 Setup Click-to-Call
             span  in 3 Easy Steps
 
-      .row
+      .row.color-boxes
         .col-sm-12.col-md-4
           .setup-grid.setup-inside-block
             img(alt="Icon2" src="../../images/icon2.png")
@@ -39,12 +39,23 @@ block content
             h5 Embed
             p Paste the code in your webpage
 
+      .row
+        .col-xs-12
+          h3 Want to
+            span  try it now?
+
+      .row.home-buttons
+        .col-sm-12.col-md-6
+          button.btn.btn-default-custom Create a sample call button
+        .col-sm-12.col-md-6
+          button.btn.btn-default-custom(onclick="document.getElementById('launch_call').click();" type="submit") Click2vox us now
+
+
+
   .contact(id="contact")
     .container
       .padding-contact
-
         .row
-
           .col-md-4
             h3 Address
             address
@@ -91,5 +102,9 @@ block content
 
       .footer
         p #[a(target="blank" href=" https://www.voxbone.com/acceptable-use-policy") Acceptable Use Policy] | #[a(target="blank" href="https://www.voxbone.com/privacy-policy") Privacy Policy] | #[a(href="/known-issues") Known Issues] | #[a(href="/faq") FAQ] | #[a(target="blank" href="mailto:workshop@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback] | #[a(target="blank" href="https://workshop.voxbone.com") A Workshop Project] | #[a(target="blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2016, VOXBONE SA]
+
+
+    #voxButton_575b3d7e89005411004db935.voxButton(data-button_id='575b3d7e89005411004db935' data-text='click2vox Us Now' data-redirect_url='https://voxbone.com' data-did='883510080408' data-dial_pad='true' data-context='' data-send_digits='' data-caller_id='Click2Vox' data-incompatible_browser_configuration='hide_widget' data-show_frame='false' data-show_branding='false' data-use_default_button_css='false' data-div_css_class_name='hidden' data-test_setup='false' data-button_css_class_name='btn btn-purple')
+    script(src='/click2vox.js')
 
 
