Added demo page button

--- a/views/home.pug
+++ b/views/home.pug
@@ -46,9 +46,9 @@ block content
 
       .row.home-buttons
         .col-sm-12.col-md-6
-          button.btn.btn-default-custom Create a sample call button
+          a.btn.btn-default-custom(href='/widget/demo') Create a sample call button
         .col-sm-12.col-md-6
-          button.btn.btn-default-custom(onclick="document.getElementById('launch_call').click();" type="submit") Click2vox us now
+          a.btn.btn-default-custom(href='#' onclick="document.getElementById('launch_call').click();" type="submit") Click2vox us now
 
 
 
