--- a/public/stylesheets/less_ui/pages/_home.less
+++ b/public/stylesheets/less_ui/pages/_home.less
@@ -8,9 +8,11 @@
 }
 
 .home-buttons{
+  color: white;
   padding-left: 20px;
   padding-right: 20px;
-  button{
+  a{
+    text-decoration: none;
     width: 100%;
     border-radius: 0;
     margin-bottom: 20px;
