Removed submit from a tag

--- a/views/home.pug
+++ b/views/home.pug
@@ -48,7 +48,7 @@ block content
         .col-sm-12.col-md-6
           a.btn.btn-default-custom(href='/widget/demo') Create a sample call button
         .col-sm-12.col-md-6
-          a.btn.btn-default-custom(href='#' onclick="document.getElementById('launch_call').click();" type="submit") Click2vox us now
+          a.btn.btn-default-custom(href='#' onclick="document.getElementById('launch_call').click();") Click2vox us now
 
 
 
