Fixed html text color in preview

--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -166,6 +166,7 @@
         color: @font-color;
         text-decoration: none;
       }
+      color: @font-color;
       position: relative;
       padding: 45px 60px 45px;
       .border-radius(5px, 0, 0, 0);
