Fixed green text

--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -2,6 +2,10 @@
   .border-radius(6px, 6px, 6px, 0);
 }
 
+.try-own {
+  color: @color-light-blue;
+}
+
 .preview-link {
   left: 15px;
   bottom: 5px;
