--- a/views/sip/new.pug
+++ b/views/sip/new.pug
@@ -45,7 +45,7 @@ block content
                           .step.active
                             span Add your SIP URI
                           .step.right
-                            span Add WebRTC Call Button
+                            span Create a Click-to-Call Button
 
 
                   .panel-body.add-sip
