fixes tests & adds changeling

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(content="The Workshop Click-to-Call" name="keywords")
-    title The Workshop by Voxbone
+    title= title
 
     link(href="/stylesheets/root.css", rel="stylesheet")
     link(href="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.min.css", rel="stylesheet")
@@ -19,7 +19,6 @@ html(lang='en')
 
     script(src="/lib/jquery/dist/jquery.min.js")
     script(src="/javascripts/directives/move-top.js")
-    script(src="/javascripts/directives/easing.js")
 
     script(src="/lib/requirejs/require.js")
     script(src="/config.js")
