Fixed responsiveness in widget preview

--- a/public/stylesheets/less/responsive.less
+++ b/public/stylesheets/less/responsive.less
@@ -1,23 +1,23 @@
 /* =================================================================================
-smaller than 1280 
+smaller than 1280
 ================================================================================= */
 @media screen and (max-width: 1280px) {
 }
 
 /* =================================================================================
-smaller than 1024 
+smaller than 1024
 ================================================================================= */
 @media screen and (max-width: 1024px) {
 }
 
 /* =================================================================================
-smaller than 760 
+smaller than 760
 ================================================================================= */
 @media screen and (max-width: 760px) {
-  
+
   .createButton .body {
     background: #fff;
-    
+
     &:before {
       display: none;
     }
@@ -26,7 +26,7 @@ smaller than 760
 }
 
 /* =================================================================================
-smaller than 620 
+smaller than 620
 ================================================================================= */
 @media screen and (max-width: 620px) {
   .navbar.navbar span.subBrand{
@@ -41,23 +41,33 @@ smaller than 620
       width: auto;
       margin-left:20px;
       margin-right: 20px;
-      padding: 30px; 
-    }  
-    
+      padding: 30px;
+    }
+
   }
+  .createButton {
+    .preview {
+      .prev-view {
+        padding: 0px 0px 70px !important;
+      }
+    }
+  }
+
 }
 
 /* =================================================================================
-smaller than 428 
+smaller than 428
 ================================================================================= */
 @media screen and (max-width: 428px) {
+  .banner-content h1 {
+    margin: 0;
+  }
   .registerPage{
     .formWrap{
       margin-left:10px;
       margin-right: 10px;
-      padding: 15px; 
-    }  
-    
+      padding: 15px;
+    }
   }
 }
 
