Fixed logo link

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -46,7 +46,7 @@ html(lang='en')
           .navbar-header
             button(class="navbar-toggler pull-right hidden-md-up" type="button" data-toggle="collapse" data-target="#bd-main-nav" aria-controls="bd-main-nav" aria-expanded="false" aria-label="Toggle navigation") ☰
 
-            a.nav-brand(href="https://www.voxbone.com")
+            a.nav-brand(href="https://click2vox.com")
               img(alt="logo" src="../../images/LogoClick")
 
             if authenticated
