--- a/views/signup.pug
+++ b/views/signup.pug
@@ -49,7 +49,7 @@ block content
 
                     strong
                       | Note for current Voxbone customers:&nbsp;
-                    span your Click2Vox login will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please visit: #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
+                    span your Click2Vox login will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please visit: #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/")]
                 .oauth-wrap
 
                   include social-buttons
